--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "fuse.js": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.1.0"
+    "react-icons": "^5.1.0",
+    "react-masonry-css": "^1.0.16"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
