--- a/package.json
+++ b/package.json
@@ -18,16 +18,20 @@
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.1.7",
     "fuse.js": "^7.0.0",
+    "leven": "^4.0.0",
     "lodash": "^4.17.21",
+    "natural": "^7.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-lazy-load-image-component": "^1.6.0",
-    "react-masonry-css": "^1.0.16"
+    "react-masonry-css": "^1.0.16",
+    "string-similarity": "^4.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/string-similarity": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
